BIS-2344: app-openbis-drive: update default list of ignored files